--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cat-cafe-directory",
+  "name": "self-service-car-wash-finder",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3003",
+    "dev": "next dev",
     "build": "next build",
     "build:cloudflare": "npm run clean && npx @opennextjs/cloudflare build",
     "start": "next start -p 3003",
